<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/start"
        android:orderInCategory="100"
        android:title="@string/Main"
        app:showAsAction="never" />
    <item
        android:id="@+id/ex1"
        android:orderInCategory="100"
        android:title="@string/ex1"
        app:showAsAction="never" />
    <item
        android:id="@+id/ex2"
        android:orderInCategory="100"
        android:title="@string/ex2"
        app:showAsAction="never" />
    <item
        android:id="@+id/ex3"
        android:orderInCategory="100"
        android:title="@string/ex3"
        app:showAsAction="never" />
    <item
        android:id="@+id/ex4"
        android:orderInCategory="100"
        android:title="@string/ex4"
        app:showAsAction="never" />
    <item
        android:id="@+id/ex5"
        android:orderInCategory="100"
        android:title="@string/ex5"
        app:showAsAction="never" />
    <item
        android:id="@+id/ex6"
        android:orderInCategory="100"
        android:title="@string/ex6"
        app:showAsAction="never" />
    <item
        android:id="@+id/ex7"
        android:orderInCategory="100"
        android:title="@string/ex7"
        app:showAsAction="never" />
    <item
        android:id="@+id/ex8"
        android:orderInCategory="100"
        android:title="@string/ex8"
        app:showAsAction="never" />
</menu>
